Fix padding of topic navigation on mobile devices (padding was not needed there anyway)
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@573 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/style/wp4.css
+++ b/wordpress.org/public_html/style/wp4.css
@@ -1559,7 +1559,6 @@ div.special { margin-top: 22px; }
 .col-10 .col-5 {
 	margin: 0;
 	width: 352px;
-	padding-right: 20px;
 }
 
 .col-10 .col-10 {
